<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/txtSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblSpeed"
        android:layout_alignBottom="@+id/lblSpeed"
        android:layout_centerHorizontal="true"
        android:text="speed placeholder" />

    <TextView
        android:id="@+id/txtLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblLatitude"
        android:layout_alignBottom="@+id/lblLatitude"
        android:layout_toRightOf="@+id/lblAccuracy"
        android:text="lat placeholder" />

    <TextView
        android:id="@+id/txtAltitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblAltitude"
        android:layout_alignBottom="@+id/lblAltitude"
        android:layout_centerHorizontal="true"
        android:text="altitude placeholder" />

    <TextView
        android:id="@+id/lblAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/txtAltitude"
        android:text="@string/Accuracy"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblAccuracy"
        android:layout_alignBottom="@+id/lblAccuracy"
        android:layout_alignLeft="@+id/txtLatitude"
        android:text="accuracy placeholder" />

    <TextView
        android:id="@+id/lblTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAccuracy"
        android:layout_below="@+id/lblAccuracy"
        android:text="@string/Time" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblLatitude"
        android:layout_alignLeft="@+id/txtAccuracy"
        android:text="time placeholder" />

    <TextView
        android:id="@+id/lblLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblTime"
        android:layout_below="@+id/lblTime"
        android:text="@string/Latitude" />

    <TextView
        android:id="@+id/lblLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblLatitude"
        android:layout_below="@+id/lblLatitude"
        android:text="@string/Longitude" />

    <TextView
        android:id="@+id/txtLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblSpeed"
        android:layout_alignLeft="@+id/txtLatitude"
        android:text="long placeholder" />

    <TextView
        android:id="@+id/lblSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAltitude"
        android:layout_below="@+id/lblLongitude"
        android:text="@string/Speed" />

    <TextView
        android:id="@+id/lblAltitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lblLatitude"
        android:layout_below="@+id/lblSpeed"
        android:text="@string/Altitude" />

    <Button
        android:id="@+id/btnStopBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/stop_background" />

    <Button
        android:id="@+id/btnStartBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStopBackground"
        android:layout_toRightOf="@+id/lblAltitude"
        android:text="@string/start_background" />

    <EditText
        android:id="@+id/txtRefreshInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblRefreshInterval"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/lblRefreshInterval"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblRefreshInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtAltitude"
        android:layout_marginTop="48dp"
        android:text="@string/refresh_interval" />

    <RadioGroup
        android:id="@+id/radioFusedProviderType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRefreshInterval"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@+id/lblLongitude" >

        <RadioButton
            android:id="@+id/radioHighAccuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/high_accuracy" />

        <RadioButton
            android:id="@+id/radioBalancedPower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balanced_power" />
    </RadioGroup>

    <TextView
        android:id="@+id/lblType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAltitude"
        android:layout_below="@+id/lblAltitude"
        android:text="@string/type" />

    <TextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblType"
        android:layout_alignBottom="@+id/lblType"
        android:layout_toRightOf="@+id/lblAccuracy"
        android:text="type placeholder" />

    <EditText
        android:id="@+id/txtNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioFusedProviderType"
        android:layout_marginTop="14dp"
        android:ems="10" />

</RelativeLayout>